--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -21,7 +21,7 @@
   background-position: center;
   background-size: cover;
 }
-/*@media screen and (min-weight: 320px) {
+/*@media screen and (min-weidth: 320px) {
    .hero {
   min-height: 400px;
   padding-top: 118px;
@@ -34,7 +34,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx),
-  screen and (min-weight: 320px) {
+  screen and (min-weidth: 320px) {
   .hero {
     background-image: linear-gradient
         (to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
@@ -42,7 +42,7 @@
   }
 }
 
-@media screen and (min-weight: 768px) {
+@media screen and (min-weidth: 768px) {
   .hero {
     background-image: linear-gradient(
         to right,
@@ -56,7 +56,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx),
-  screen and (min-weight: 768px) {
+  screen and (min-weidth: 768px) {
   .hero {
     background-image: linear-gradient(
         to right,
@@ -67,7 +67,7 @@
   }
  }
 
-@media screen and (min-weight: 1200px) {
+@media screen and (min-weidth: 1200px) {
   .hero {
     min-height: 600px;
     padding-top: 200px;
@@ -84,7 +84,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx),
-  screen and (min-weight: 1200px) {
+  screen and (min-weidth: 1200px) {
   .hero {
     background-image: linear-gradient(
         to right,
@@ -105,7 +105,7 @@
 @media screen and(min-width: 480px) {
   .hero-title {
     font-size: 26px;
-    line-height: 1, 62;
+    line-height: 1,62;
   }
 }
 @media screen and(min-width: 1200px) {
