--- a/css/main.css
+++ b/css/main.css
@@ -971,13 +971,13 @@ html {
    url("../images/mobile/headerimgmobi.jpg");
   }
 }*/
-@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-weidth: 320px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 320px) {
   .hero {
     background-image: linear-gradient to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8), url("../images/mobile/headerimgmobi@2x.jpg");
   }
 }
 
-@media screen and (min-weidth: 768px) {
+@media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/tablet/header-imgtab.jpg");
   }
@@ -989,7 +989,7 @@ html {
   }
 }
 
-@media screen and (min-weidth: 1200px) {
+@media screen and (min-width: 1200px) {
   .hero {
     min-height: 600px;
     padding-top: 200px;
@@ -998,7 +998,7 @@ html {
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-weidth: 1200px) {
+@media screen and (min-device-pixel-ratio: 2), screen and (min-resolution: 192dpi), screen and (min-resolution: 2dppx), screen and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/destop/headerimgdes@2x.jpg");
   }
