--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -34,7 +34,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx),
-  screen and (min-weidth: 320px) {
+  screen and (min-width: 320px) {
   .hero {
     background-image: linear-gradient
         (to right, rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)),
@@ -42,7 +42,7 @@
   }
 }
 
-@media screen and (min-weidth: 768px) {
+@media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(
         to right,
@@ -67,7 +67,7 @@
   }
  }
 
-@media screen and (min-weidth: 1200px) {
+@media screen and (min-width: 1200px) {
   .hero {
     min-height: 600px;
     padding-top: 200px;
@@ -84,7 +84,7 @@
 @media screen and (min-device-pixel-ratio: 2),
   screen and (min-resolution: 192dpi),
   screen and (min-resolution: 2dppx),
-  screen and (min-weidth: 1200px) {
+  screen and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(
         to right,
