--- a/sass/layout/_services.scss
+++ b/sass/layout/_services.scss
@@ -1,4 +1,17 @@
 /*Чем мы занимаемся*/
+@media screen and (max-width: 1199px){
+.servises{
+  display: none;
+ }
+}
+@media screen and (min-width: 1200px) {
+ .expert {
+  display: flex;
+
+&-item:not(:last-child) {
+  margin-right: 30px;
+ }
+}
 .expert-item {
   position: relative;
   width: 370px;
@@ -19,4 +32,5 @@
   background-color: rgba(47, 48, 58, 0.8);
   text-transform: uppercase;
   color: $text-fon;
+  }
 }
