--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -102,13 +102,13 @@
   text-transform: uppercase;
   margin-bottom: 30px;
 }
-@media screen and(min-width: 480px) {
+@media screen and (max-width: 1199px) {
   .hero-title {
     font-size: 26px;
     line-height: 1,62;
   }
 }
-@media screen and(min-width: 1200px) {
+@media screen and (min-width: 1200px) {
   .hero-title {
     font-size: 44px;
     line-height: 1.36;
