--- a/css/main.css
+++ b/css/main.css
@@ -325,7 +325,6 @@ html {
 .address-mail,
 .address-tel {
   display: flex;
-  justify-content: center;
   align-items: center;
   color: #757575;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -355,6 +354,10 @@ html {
   }
   .address-list + .address-list {
     margin-top: 16px;
+  }
+  .address-mail,
+  .address-tel {
+    justify-content: center;
   }
   .navigation-list-link,
   .address-mail,
@@ -441,6 +444,9 @@ html {
     padding-top: 32px;
     padding-bottom: 32px;
     padding-right: 0;
+  }
+  .auth-nav-adress {
+    display: flex;
   }
   .address-mail, .address-tel {
     font-size: 12px;
