--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,4 +1,6 @@
 /* модальное окно*/
+
+
 .backdrop {
   position: fixed;
   top: 0;
@@ -17,8 +19,6 @@
 }
 .contact-form {
   position: relative;
-  min-width: 528px;
-  min-height: 581px;
   display: flex;
   flex-direction: column;
   padding: 40px;
@@ -52,7 +52,6 @@
 }
 .form-fieid {
   position: relative;
-  width: 448px;
   margin-bottom: 28px;
 }
 .form-input {
@@ -217,5 +216,23 @@
   background-color: #188ce8;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
+ }
+}
+@media screen and (max-width: 1199px){
+  .contact-form {
+  max-width: 450px;
+  min-height: 609px;
+  }
+  .form-fieid {
+   width: 370px;
+ }
+}
+@media screen and (min-width: 1200px){
+  .contact-form {
+  min-width: 528px;
+  min-height: 581px;
+ }
+ .form-fieid {
+ width: 448px;
  }
 }
