--- a/sass/layout/_gallery.scss
+++ b/sass/layout/_gallery.scss
@@ -4,9 +4,7 @@
   flex-wrap: wrap;
 }
 .portfolio-item {
-  width: 370px;
   height: 404px;
-  margin-right: 30px;
   margin-bottom: 30px;
   background: $text-fon;
   border: 1px solid #eeeeee;
@@ -21,12 +19,7 @@
 &:hover .overlay {
   transform: translatey(0);
 }
-&:nth-child(3n) {
-  margin-right: 0;
-}
-&:nth-last-child(-n + 3) {
-  margin-bottom: 0;
- }
+
 }
 .overlay-img {
   position: relative;
@@ -45,8 +38,9 @@
 }
 .portfolio-link-list {
   display: block;
-  width: 370px;
+  width: 100%;
   height: 294px;
+
 }
 
 .description {
@@ -76,4 +70,35 @@
   padding-left: 24px;
   letter-spacing: 0.03em;
   color: $title-text-color;
+}
+@media screen and(max-width: 767px){
+  .portfolio-item{
+      width: 450px;
+ } 
+}
+@media screen and(min-width: 768px){
+.portfolio-item {
+  width: 354px;
+  margin-right: 30px;
+  &:nth-last-child(-n + 2) {
+  margin-bottom: 0;
+  }
+ }
+}
+@media screen and(max-width: 1199px){
+  .portfolio-item:nth-child(2n){
+     margin-right: 0;
+   }
+ }
+@media screen and(min-width: 1200px){
+.portfolio-item {
+  width: 370px;
+
+ &:nth-child(3n) {
+  margin-right: 0;
+ }
+&:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+  }
+ }
 }
