--- a/sass/layout/_masters.scss
+++ b/sass/layout/_masters.scss
@@ -3,8 +3,8 @@
   background: #f5f4fa;
 }
 .komand-list-item {
-  width: 270px;
-  height: 422px;
+  /*width: 270px;
+  height: 422px;*/
   background: #ffffff;
   /*border: 1px solid #eeeeee;*/
   box-sizing: border-box;
@@ -15,21 +15,57 @@
   .komand-list-item-img {
   margin-bottom: 30px;
 }
-.title-name {
-  font-weight: 500;
+.title-name{
+font-weight: 500;
+margin-bottom: 10px;
+}
+.title-name,
+.title-desc-list {
   font-size: 16px;
   line-height: 1.19;
-  margin-bottom: 10px;
   text-align: center;
   letter-spacing: 0.03em;
   color: $title-dark-color;
 }
 .title-desc-list {
   font-weight: normal;
-  font-size: 16px;
-  line-height: 1.19;
   margin-bottom: 16px;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: $title-text-color;
+}
+@media screen and(min-width: 480px){
+
+  .komand-list-item {
+  width: 100%;
+  height: 622px;
+  &:not(:last-child) {
+    margin-bottom: 30px;
+  }
+ }
+}
+@media screen and(min-width: 768px){
+    .komand-list{
+   display: flex;
+   flex-wrap: wrap;
+ }
+  .komand-list-item {
+   width: 354px;
+   height: 536px;
+   margin-bottom: 30px;
+  &:nth-child(2n+1) {
+   margin-right: 30px;
+    } 
+     
+  &:nth-last-child(-n + 2) {
+  margin-bottom: 0;
+    }
+  }
+}
+@media screen and(min-width: 1200px){
+  .komand-list-item {
+  width: 270px;
+  height: 428px;
+  
+  &:not(:last-child) {
+  margin-right: 30px;
+   }
+ }
 }
